fixed responsive editTask-Overlay horizontal scrollbar

--- a/styles/respBoard.css
+++ b/styles/respBoard.css
@@ -119,3 +119,9 @@
         padding-right: 16px;
     }
 }
+
+@media(max-width: 415px) {
+    #editTaskContainer .prioContainer {
+        flex-direction: column;
+    }
+}
